prevent horizontal scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -20,6 +20,13 @@
   }
 }
 
+/* Prevent horizontal scrollbar caused by vertical scrollbar offset */
+@layer base {
+  html, body {
+    overflow-x: hidden;
+  }
+}
+
 :root {
   font-family:
     Arial,
